--- a/pixeostyle.css
+++ b/pixeostyle.css
@@ -10,12 +10,22 @@ body{
 	    table-layout: fixed;
 	    color:#4d94ff;
 	    font-size: 1.3em;
+	    width: 100%;
 	} 
 	td{
-	    word-wrap: break-word;         /* All browsers since IE 5.5+ */
-	    overflow-wrap: break-word;     /* Renamed property in CSS3 draft spec */
+	     /* All browsers since IE 5.5+ */
+	   /* Renamed property in CSS3 draft spec */
 	    border: 0px solid black;
-	    height:180px;
+	    height:160px;
+	}
+	.td-thumbnail{
+		
+		width:250px;
+	}
+	.td-details{
+		width:65%;
+		word-wrap: break-word;
+		overflow-wrap: break-word;
 	}
 	.container-fluid{
 		margin: 0px;
@@ -29,7 +39,7 @@ body{
 		min-width:485px; 
 		z-index: 1;
 	}
-	#signout{
+	#adminButton,#signout{
 		background: #66a3ff;
 		border-width: 0px;
 		width:90px;
@@ -39,12 +49,16 @@ body{
 	}
 	#sidepane{
 		position: fixed;
-		height:90vh;
+		height:91vh;
 		background-color:white;
 		padding-top: 10px;
 		max-width: 216px;
 		min-width: 210px;
 		z-index: 1;
+		overflow-y:hidden;
+	}
+	#sidepane:hover{
+		overflow-y:scroll; 
 	}
 	#main{
 		margin-top: 60px;
@@ -56,10 +70,14 @@ body{
 		background: none;
 		height:35px;
 		width:100%;
+		min-width: 165px;
 		font-size: 1.1em;
 		text-align: left;
 	}
-	
+	.sidepane-button:hover{
+		background: #66a3ff;
+		color: white;
+	}
 	#disc{
 		width:30px;
 		height:30px;
@@ -69,21 +87,22 @@ body{
 		display: none;
 	}
 	#box{
-		width:180px;
-		height:200px;
 		background: white;
-		padding: 10px;
+		padding: 30px;
 		display: none;
 		color:grey;
 		position: relative;
 		right:150px;
 		box-shadow: 0.5px 0.5px 0.5px 1px grey;
 	}
+	#box-name,#box-email{
+		word-wrap: break-word; 
+	}
 	#main-body{
 		background: white;
 		min-height:600px;/* min-height:90vh;*/
 		margin-left: 250px;
-		
+		min-width: 670px;
 	}
 	#header-searchbar{
 		border-width: 0px;
@@ -126,3 +145,55 @@ body{
 		width:30px;
 		height: 30px;
 	}
+	#site-description{
+		width:100%;
+		height: 180px;
+		text-align: center;
+		margin-top: 200px;
+		border-top: 1px solid lightgrey;
+		padding-top: 20px;
+		font-size: 1.1em;
+		color: grey;
+		background:white; 
+		linear-gradient(45deg,  #66a3ff, white);
+	}
+	#categoryList{
+		margin-top:5px;
+	}
+	#categoryTitle{
+		font-size: 1.1em;
+		color: grey;
+		font-weight: bold;
+		margin-left:10px; 
+	}
+	.categoryButton{
+		background: none;
+		border-width: 0px;
+		color: grey;
+		min-height: 35px;
+		width: 100%;
+		min-width: 165px;
+		text-align: left;
+	}
+	.categoryButton:hover{
+		background: #66a3ff;
+		color: white;
+	}
+	#titleImage{
+		width:100%;
+		height:300px;
+	}
+	.delete-button{
+		background: none;
+		color: grey;
+		border: 2px solid #66a3ff;
+	}
+#sidepane::-webkit-scrollbar {
+  width: 6px; 
+  background-color:lightgrey;
+  
+}
+#sidepane::-webkit-scrollbar-thumb{
+	background-color:#66a3ff;
+	-webkit-border-radius:3px;
+}
